crates/shinyproxy/tests/snapshots/html_snapshots__login_page_expired.snap
---
source: crates/shinyproxy/tests/html_snapshots.rs
expression: "regex::Regex::new(r#\"value=\"[0-9a-zA-Z_\\-]{16,}\"\"#).expect(\"regex\").replace_all(&page(&instance,\n&client, \"/login?error=expired\").await, r#\"value=\"{csrf-token}\"\"#).to_string()"
---

<!DOCTYPE html>
<html>
    <head lang="en">
        <title>My ShinyProxy</title>
        <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
        <meta content="width=device-width, initial-scale=1" name="viewport"/>
        <link media="screen" rel="stylesheet" href="/css/bootstrap.css"/>
        <link media="screen" rel="stylesheet" href="/css/login.css"/>
        <link media="screen" rel="stylesheet" href="/webjars/fontawesome/4.7.0/css/font-awesome.min.css"/>
        <script src="/webjars/jquery/3.7.1/jquery.min.js"></script>
        <script src="/js/bootstrap.js"></script>
    </head>

    <body>
        <div class="container">
            <form class="form-signin" method="POST" action="/login">
                <h2 class="form-signin-heading">Please sign in:</h2>
                
                <div class="alert alert-danger">
                    <strong>Could not sign in!</strong><br/><span>Your session has expired, please try again</span>.
                </div>
                
                <label class="sr-only" for="username">Email address</label>
                <input autofocus="autofocus" class="form-control" id="username" name="username" placeholder="User name"
                       required="required">
                <label class="sr-only" for="password">Password</label>
                <input class="form-control" id="password" name="password" placeholder="Password" required="required"
                       type="password">
                <input type="hidden" name="_csrf" value="{csrf-token}">
                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
            </form>
        </div>
    </body>
</html>
