crates/shinyproxy/tests/snapshots/html_snapshots__logout_success_page.snap
---
source: crates/shinyproxy/tests/html_snapshots.rs
expression: "page(&instance, &client, \"/logout-success\").await"
---

<!DOCTYPE html>
<html>
    <head lang="en">
        <title>My ShinyProxy</title>
        <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
        <meta content="width=device-width, initial-scale=1" name="viewport"/>
        <link media="screen" rel="stylesheet" href="/css/bootstrap.css"/>
        <link media="screen" rel="stylesheet" href="/css/login.css"/>
        <script src="/webjars/jquery/3.7.1/jquery.min.js"></script>
        <script src="/js/bootstrap.js"></script>
    </head>
    <body>
        <div class="container">
            <h2>You have been logged out successfully.</h2>
            <p><a href="/"><b>Login again</b></a></p>
        </div>
        <style>
            h2 {
                margin-bottom: 20px;
                margin-top: 20px;
            }
        </style>
    </body>
</html>
